Finish resizing, it works fairly decent now. Resolves #6. The unfortunate thing is that `transform: scale` causes fairly blurry text rendering, but there's nothing to be done about that. Also interesting is that you cannot apply `transform: scale` to the layer manager, because it messes up the absolute positioning. Still need to find something for that.

--- a/src/plugins/resize/style.styl
+++ b/src/plugins/resize/style.styl
@@ -1,3 +1,6 @@
+body
+    position relative
+
 .resize-handle
     position absolute
     right 0
